# fictional-funicular

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  core-repo-setup.md  package.json  pyproject.toml
.github/: copilot-instructions.md
.github/mcp/: aws-mcp-config.json
.specify/memory/: constitution.md
.specify/scripts/bash/: prereq-checker.sh
specs/001-ai-native-aws-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-native-aws-setup/checklists/: requirements.md
specs/001-ai-native-aws-setup/contracts/: cli-contracts.md
specs/001-repo-setup/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-repo-setup/checklists/: comprehensive-updated.md  comprehensive.md  requirements.md
specs/001-repo-setup/contracts/: agent-api.yaml
specs/002-ai-native-aws-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-native-aws-setup/checklists/: aws-setup.md  requirements.md
specs/002-ai-native-aws-setup/contracts/: env.schema.json  mcp-smoke-test.contract.md
src/: __init__.py
src/utils/: config.py  logging.py  validation.py
tests/unit/: test_utils.py
